force-app/main/default/objects/Account_Plan__c/fields/Account_Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Details__c</fullName>
    <inlineHelpText>Enter in details for the account plan here.</inlineHelpText>
    <label>Account Plan Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>