force-app/main/default/objects/Account_Plan__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <inlineHelpText>The amount of revenue expected from this account.</inlineHelpText>
    <label>Expected Revenue</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>