force-app/main/default/objects/Account_Plan__c/fields/Key_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitors__c</fullName>
    <label>Key Competitors</label>
    <type>TextArea</type>
</CustomField>