force-app/main/default/objects/Account_Plan__c/fields/Marketing_Efforts_Planned__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Efforts_Planned__c</fullName>
    <label>Marketing Efforts Planned</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>